# matrix-cli-rs

./: Cargo.toml  LICENSE  login.zsh
src/: main.rs
