[package]
name = "matrix-cli-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk = {version = "0", features = ["anyhow"]}
tracing-subscriber = "0"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
url = "2"